--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/chatroom.css"/>
     <link rel="stylesheet" href="styles/chat.css"/>
     <link rel="stylesheet" href="styles/profile.css"/>
+    <link rel="stylesheet" href="styles/friendinfo.css"/>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
